--- a/BoardPjt/src/main/webapp/resources/css/member/join.css
+++ b/BoardPjt/src/main/webapp/resources/css/member/join.css
@@ -3,7 +3,12 @@
 	margin: 0;
 	padding:0;
 }
-
+.correct{
+	color : green;	
+}
+.incorrect{
+	color : red;
+}
 /* 화면 전체 렙 */
 .wrapper{
 	width: 1900px;	
@@ -182,7 +187,6 @@
     background-color: #ececf7;
     cursor: pointer;
 }
-
 /* 주소 영역 */
 .address_wrap{
 	width: 100%;
