--- a/BoardPjt/src/main/webapp/resources/css/member/join.css
+++ b/BoardPjt/src/main/webapp/resources/css/member/join.css
@@ -266,6 +266,25 @@
     font-weight: 900;
     color: white;
 }
+.final_id_ck{
+	display: none;
+}
+.final_pw_ck{
+	display: none;
+}
+.final_pwck_ck{
+	display: none;
+}
+.final_name_ck{
+	display: none;
+}
+.final_mail_ck{
+	display: none;
+}
+.final_addr_ck{
+	display: none;
+}
+
 
 /* float 속성 해제 */
 .clearfix{
