--- a/BoardPjt/src/main/webapp/resources/css/member/join.css
+++ b/BoardPjt/src/main/webapp/resources/css/member/join.css
@@ -285,6 +285,16 @@
 	display: none;
 }
 
+/* 비밀번호 일치 여부*/
+.pwck_input_re_1{
+	color:green;
+	display: none;
+}
+.pwck_input_re_2{
+	color: red;
+	display: none;
+}
+
 
 /* float 속성 해제 */
 .clearfix{
