--- a/BoardPjt/src/main/webapp/resources/css/member/login.css
+++ b/BoardPjt/src/main/webapp/resources/css/member/login.css
@@ -61,7 +61,6 @@
 	font-size:28px;
 }
 
-
 .login_button_wrap{
 	margin-top: 40px;
 	text-align: center;
@@ -75,6 +74,29 @@
     color: white;
     margin : auto;
 }
+
+/* 로그인 실패*/
+.login_warn{
+	margin-top: 30px;
+	text-align: center;
+	color: red;
+}
+
+.login_success_area{
+	height: 62%;
+	width: 80%;
+	border: 2px solid #7474ad;
+	border-radius: 15px;
+	margin: 5% auto;
+	padding-top: 5%;
+}
+.login_success_area>span{
+	display: block;
+	text-align: left;
+	margin-left: 10%;
+}
+
+
 
 /* float 속성 해제 */
 .clearfix{
