--- a/BoardPjt/src/main/webapp/resources/css/main.css
+++ b/BoardPjt/src/main/webapp/resources/css/main.css
@@ -5,7 +5,7 @@
 }
 /* 화면 전체 렙 */
 .wrapper{
-	width: 1900px;
+	width: 100%;
 }
 /* content 랩 */
 .wrap{
@@ -38,6 +38,34 @@
 	background-color: yellow;
 	float:left;	
 }
+
+.login_success_area{
+	height: 62%;
+	width: 80%;
+	border: 2px solid #7474ad;
+	border-radius: 15px;
+	margin: 5% auto;
+	padding-top: 5%;
+}
+.login_success_area>span{
+	display: block;
+	text-align: left;
+	margin-left: 10%;
+}
+
+.login_success_area>a{
+    font-size: 15px;
+    font-weight: 900;
+    display: inline-block;
+    margin-top: 5px;
+    background: #e1e5e8;
+    width: 82px;
+    height: 22px;
+    line-height: 22px;
+    border-radius: 25px;
+    color: #606267;    
+}
+
 /* 로그인 버튼 영역 */
 .login_area{
 	width: 25%;
