--- a/BookMallPjt/src/main/webapp/resources/css/admin/goodsModify.css
+++ b/BookMallPjt/src/main/webapp/resources/css/admin/goodsModify.css
@@ -187,6 +187,13 @@ input[name='publeYear'] {
     background-color: #c9cbd0;
 }
 
+.delete_btn{
+	background-color: #efcdcd;
+}
+.delete_btn:hover{
+	background-color : #e4a7a7;
+}
+
 .form_section_content select {		/* 카테고리 css 설정 */
     width: 92%;
     height: 35px;
