--- a/BookMallPjt/src/main/webapp/resources/css/admin/authorModify.css
+++ b/BookMallPjt/src/main/webapp/resources/css/admin/authorModify.css
@@ -177,6 +177,14 @@ ul{
 	margin-left:15px;
 }
 
+.delete_btn{
+	background-color: #efcdcd;
+}
+.delete_btn:hover{
+	background-color : #e4a7a7;
+}
+
+
 
 
 
@@ -240,6 +248,7 @@ ul{
 	margin-left: 70px;
 	margin-top : 30px;
 }
+
 
 
 
